--- a/index.html
+++ b/index.html
@@ -1,71 +1,83 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Community Science Museum</title>
-        <meta charset="UTF-8">
-        <meta name="description" Content="Welcome to Community Science Museum">
-        <meta name="viewport" Content="width=device-width, initial-scale=1">
-        <!--google fonts-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
-        <!--CSS-->
-        <link rel="stylesheet" href="css/index.css">
-        <!--Favicon-->
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
-        <!--Icons-->
-        <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header>
-            <a href="index.html" class="header-logo">
-                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
-            </a>
-            <label for="menue-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
-                <i class="fas fa-bars fa"></i>
-            </label>
-            <input type="checkbox" name="menue-checkbox" id="menue-checkbox">
-            <nav>
-                <a href="index.html" class="nav-active">Home</a>
-                <a href="explore.html">Explore</a>
-                <a href="exhibitions.html">Exhibitions</a>
-                <a href="events.html">Events</a>                
-                <a href="tickets.html">Tickets</a>
-                <a href="cart.html">Cart</a>
-            </nav>
-        </header>
-        <main> 
-            <section class="container-header">
-                <h1>
-                    <span>Community</span>
-                    <span>science</span>
-                    <span>museum</span>
-                </h1>  
-            </section>
-            <a href="explore.html" class="cta-button__header">Go exploring</a>
-            <section class="slogan">
-                <h2>Discover Hands-On Fun and Science Together!</h2>
-            </section>
-            <section class="horizontal">
-                <div class="horizontal-text">
-                    <h2>Hands on learning</h2>
-                    <p>Interactive exhibits allow visitors to engage directly with science concepts, making learning fun and memorable.</p>
-                </div>
-                <div class="horizontal-text">
-                    <h2>Family Bonding</h2>
-                    <p>The museum offers a shared experience for families to explore together, promoting teamwork and communication while discovering new things.</p>
-                </div>
-                <div class="horizontal-text">
-                    <h2>Inspiration and curiosity</h2>
-                    <p>Thought-provoking displays and exciting demonstrations spark curiosity, encouraging visitors to ask questions and explore science beyond the museum walls.</p>
-                </div>
-            </section>
 
+<head>
+    <title>Community Science Museum</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Welcome to Community Science Museum">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
+        rel="stylesheet">
+    <!--CSS-->
+    <link rel="stylesheet" href="css/index.css">
+    <!--Favicon-->
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
+    <!--Icons-->
+    <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <header>
+        <a href="index.html" class="header-logo">
+            <img src="./assets/open-science-735787-removebg-preview-2.png"
+                alt="Logo of earth with a keyhole and galaxies around.">
+        </a>
+        <label for="menu-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
+            <i class="fas fa-bars fa"></i>
+        </label>
+        <input type="checkbox" name="menu-checkbox" id="menu-checkbox">
+        <nav>
+            <a href="index.html" class="nav-active">Home</a>
+            <a href="explore.html">Explore</a>
+            <a href="exhibitions.html">Exhibitions</a>
+            <a href="events.html">Events</a>
+            <a href="tickets.html">Tickets</a>
+            <a href="cart.html">Cart</a>
+        </nav>
+    </header>
+    <main>
+        <section class="container-header">
+            <h1>
+                <span>Community</span>
+                <span>science</span>
+                <span>museum</span>
+            </h1>
+            <a href="explore.html" class="cta-button__header">Go exploring</a>
+        </section>
+
+        <section>
+            <h2 class="slogan">Discover Hands-On Fun and Science Together!</h2>
+            <div class="horizontal">
+                <article class="horizontal-text">
+                    <h3>Hands on learning</h3>
+                    <p>Interactive exhibits allow visitors to engage directly with science concepts, making learning fun
+                        and
+                        memorable.</p>
+                </article>
+                <article class="horizontal-text">
+                    <h3>Family Bonding</h3>
+                    <p>The museum offers a shared experience for families to explore together, promoting teamwork and
+                        communication while discovering new things.</p>
+                </article>
+                <article class="horizontal-text">
+                    <h3>Inspiration and curiosity</h3>
+                    <p>Thought-provoking displays and exciting demonstrations spark curiosity, encouraging visitors to
+                        ask
+                        questions and explore science beyond the museum walls.</p>
+                </article>
+            </div>
+        </section>
+
+        <section>
             <h2>Special events</h2>
             <div class="scroll-container">
                 <section class="card">
                     <div class="card-image-container">
-                        <img src="./assets/roberto-nickson-396152.jpg" alt="Mammut in the middle of a museum">
+                        <img src="./assets/roberto-nickson-396152.jpg" alt="Mammoth in the middle of a museum">
                     </div>
                     <h3>Night in the museum</h3>
                     <a href="events.html" class="cta-button">Go to events</a>
@@ -85,95 +97,112 @@
                     <a href="events.html" class="cta-button">Go to events</a>
                 </section>
             </div>
+        </section>
 
-            <section class="explore">
-                <h2>Explore</h2>
-                <div class="explore-card">
-                    <div class="explore-card-image-container">
-                        <img src="./assets/learn-2405206_1920.jpg" alt="Girl looking at a mathematic equation">
-                    </div>
-                    <a href="explore.html" class="cta-button">Kids</a>
+        <section class="explore">
+            <h2>Explore</h2>
+            <div class="explore-card">
+                <div class="explore-card-image-container">
+                    <img src="./assets/learn-2405206_1920.jpg" alt="Girl looking at a mathematic equation">
                 </div>
-                <div class="explore-card">
-                    <div class="explore-card-image-container">
-                        <img src="./assets/lab-512503_1920.jpg" alt="Lab equipment for a science project">
-                    </div>
-                    <a href="explore.html" class="cta-button">Teachers</a>
+                <a href="explore.html" class="cta-button">Kids</a>
+            </div>
+            <div class="explore-card">
+                <div class="explore-card-image-container">
+                    <img src="./assets/lab-512503_1920.jpg" alt="Lab equipment for a science project">
                 </div>
-                <div class="explore-card">
-                    <div class="explore-card-image-container">
-                        <img src="./assets/mavis-cw-164128.jpg" alt="Museum hall with study desks">
-                    </div>
-                    <a href="explore.html" class="cta-button">Researchers</a>
+                <a href="explore.html" class="cta-button">Teachers</a>
+            </div>
+            <div class="explore-card">
+                <div class="explore-card-image-container">
+                    <img src="./assets/mavis-cw-164128.jpg" alt="Museum hall with study desks">
                 </div>
-            </section>
+                <a href="explore.html" class="cta-button">Researchers</a>
+            </div>
+        </section>
 
+        <section>
             <h2>Exhibitions</h2>
             <div class="scroll-container">
-                <section class="card">
+                <article class="card">
                     <div class="card-image-container">
                         <img src="./assets/toa-heftiba-412579.jpg" alt="Dinosaur skeleton in a big museum hall">
                     </div>
                     <h3>Evolution</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
-                </section>
-                <section class="card">
+                </article>
+                <article class="card">
                     <div class="card-image-container">
                         <img src="./assets/andrew-ruiz-348421.jpg" alt="Astronaut in a spaceship">
                     </div>
                     <h3>Cosmology</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
-                </section>
-                <section class="card">
+                </article>
+                <article class="card">
                     <div class="card-image-container">
                         <img src="./assets/samuel-zeller-113381.jpg" alt="Human anatomy figure">
                     </div>
                     <h3>Biology & Medicine</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
-                </section>
-                <section class="card">
+                </article>
+                <article class="card">
                     <div class="card-image-container">
                         <img src="./assets/william-bout-264826.jpg" alt="Art exhibition illustrating a network">
                     </div>
                     <h3>Robotics & AI</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
-                </section>
-                <section class="card">
+                </article>
+                <article class="card">
                     <div class="card-image-container">
-                        <img src="./assets/open-science-735787.jpg" alt="Logo of earth with a keyhole and galaxies around.">
+                        <img src="./assets/open-science-735787.jpg"
+                            alt="Logo of earth with a keyhole and galaxies around.">
                     </div>
                     <h3>Ecology</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
-                </section>
+                </article>
             </div>
-            <section class="visit">
-                <h2>Visit</h2>
-                <h3>Opening hours</h3>
-                <p>Monday: Closed</p>
-                <p>Tuesday: 10:00 - 16:00</p>
-                <p>Wednesday: 10:00 - 16:00</p>
-                <p>Thursday: 10:00 - 16:00</p>
-                <p>Friday: 10:00 - 19:00</p>
-                <p>Saturday: 9:00 - 16:00</p>
-                <p>Sunday: 9:00 - 13:00</p>
-                <h3>Location</h3>
+        </section>
+
+        <section class="visit">
+            <h2>Visit</h2>
+            <h3>Opening hours</h3>
+            <p>Monday: Closed</p>
+            <p>Tuesday: 10:00 - 16:00</p>
+            <p>Wednesday: 10:00 - 16:00</p>
+            <p>Thursday: 10:00 - 16:00</p>
+            <p>Friday: 10:00 - 19:00</p>
+            <p>Saturday: 9:00 - 16:00</p>
+            <p>Sunday: 9:00 - 13:00</p>
+            <h3>Location</h3>
+            <address>
                 <p>Mølleparken 4</p>
                 <p>0459 Oslo</p>
-                <div class="map-container">
-                    <div class="map-container-img-mobile">
-                        <iframe title="Interactive google maps of Noroff Oslo" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317143501!5m2!1sno!2sno" width="343" height="343" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                    <div class="map-container-img-desktop">
-                        <iframe title="Interactive google maps of Noroff Oslo" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317432426!5m2!1sno!2sno" width="1000" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                </div>  
-            </section>
-        </main>
-        <footer>
-            <a href="about.html">About</a>
-            <a href="contact-us.html">Send us a message</a>
-            <a href="get-involved.html">Get involved</a>
-            <a href="visit.html">Visit</a>
-        </footer>
-    </body>
+            </address>
+
+            <div class="map-container">
+                <div class="map-container-img-mobile">
+                    <iframe title="Interactive google maps of Noroff Oslo"
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317143501!5m2!1sno!2sno"
+                        width="343" height="343" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="map-container-img-desktop">
+                    <iframe title="Interactive google maps of Noroff Oslo"
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317432426!5m2!1sno!2sno"
+                        width="1000" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <footer>
+        <a href="about.html">About</a>
+        <a href="contact-us.html">Send us a message</a>
+        <a href="get-involved.html">Get involved</a>
+        <a href="visit.html">Visit</a>
+    </footer>
+</body>
+
 </html>
