--- a/cart.html
+++ b/cart.html
@@ -1,124 +1,130 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Cart</title>
-        <meta charset="UTF-8">
-        <meta name="description" Content="Shoppingcart for tickets">
-        <meta name="viewport" Content="width=device-width, initial-scale=1">
-        <!--google fonts-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
-        <!--CSS-->
-        <link rel="stylesheet" href="css/cart.css">
-        <!--Favicon-->
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
-        <!--Icons-->
-        <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header>
-            <a href="index.html" class="header-logo">
-                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
-            </a>
-            <label for="menue-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
-                <i class="fas fa-bars fa"></i>
-            </label>
-            <input type="checkbox" name="menue-checkbox" id="menue-checkbox">
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="explore.html">Explore</a>
-                <a href="exhibitions.html">Exhibitions</a>
-                <a href="events.html">Events</a>                
-                <a href="tickets.html">Tickets</a>
-                <a href="cart.html" class="nav-active">Cart</a>
-            </nav>
-        </header>
-        <main> 
-            <h1>Cart</h1>
-            <section>
-                <h2>Order summary</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Guided tours</th>
-                            <th>Tickets</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Kids</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>Adults</td>
-                            <td>2</td>
-                        </tr>
-                        <tr>
-                            <td>Price</td>
-                            <td>$20</td>
-                        </tr>
-                    </tbody>
-                    <thead>
-                        <tr>
-                            <th>Night in the museum</th>
-                            <th>Tickets</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Kids</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>Adults</td>
-                            <td>2</td>
-                        </tr>
-                        <tr>
-                            <td>Price</td>
-                            <td>$20</td>
-                        </tr>
-                    </tbody>
-                    <thead>
-                        <tr>
-                            <th>Price in total</th>
-                            <th>$40</th>
-                        </tr>
-                    </thead>
-                </table>
-            </section>
-            <section>
-                <h2>Contact and billing details</h2>
-                <form class="form">
-                    <fieldset>
-                        <label for="name">Full name</label>
-                        <input type="text" name="name" id="name" class="form__input" required>
-                        <label for="email">Email</label>
-                        <input type="email" name="email" id="email" class="form__input" required>
-                        <label for="adress">Adress</label>
-                        <input type="adress" name="adress" id="adress" class="form__input" required>
-                        <label for="postalcode">Postal code</label>
-                        <input type="number" name="postalcode" id="postalcode" class="form__input" required>
-                        <label for="city">City</label>
-                        <input type="text" name="city" id="city" class="form__input" required>
-                        <label for="cardnumber">Cardnumber</label>
-                        <input type="number" name="cardnumber" id="cardnumber" class="form__input" required>
-                        <label for="expiry">Expiry</label>
-                        <input type="number" name="expiry" id="expiry" class="form__input" required>
-                        <label for="cvc">CVC</label>
-                        <input type="number" name="cvc" id="cvc" class="form__input" required>
-                    </fieldset>
-                </form>
-                <a href="check-out-success.html" class="cta-button">Confirm order</a>
-            </section>
-        </main>
-       
-        <footer>
-            <a href="about.html">About</a>
-            <a href="contact-us.html">Send us a message</a>
-            <a href="get-involved.html">Get involved</a>
-            <a href="visit.html">Visit</a>
-        </footer>
 
-    </body>
+<head>
+    <title>Cart</title>
+    <meta charset="UTF-8">
+    <meta name="description" Content="Shoppingcart for tickets">
+    <meta name="viewport" Content="width=device-width, initial-scale=1">
+    <!--google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
+        rel="stylesheet">
+    <!--CSS-->
+    <link rel="stylesheet" href="css/cart.css">
+    <!--Favicon-->
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
+    <!--Icons-->
+    <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <header>
+        <a href="index.html" class="header-logo">
+            <img src="./assets/open-science-735787-removebg-preview-2.png"
+                alt="Logo of earth with a keyhole and galaxies around.">
+        </a>
+        <label for="menu-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
+            <i class="fas fa-bars fa"></i>
+        </label>
+        <input type="checkbox" name="menu-checkbox" id="menu-checkbox">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="explore.html">Explore</a>
+            <a href="exhibitions.html">Exhibitions</a>
+            <a href="events.html">Events</a>
+            <a href="tickets.html">Tickets</a>
+            <a href="cart.html" class="nav-active">Cart</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Cart</h1>
+        <section>
+            <h2>Order summary</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Guided tours</th>
+                        <th>Tickets</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Kids</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Adults</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>Price</td>
+                        <td>$20</td>
+                    </tr>
+                </tbody>
+                <thead>
+                    <tr>
+                        <th>Night in the museum</th>
+                        <th>Tickets</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Kids</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Adults</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>Price</td>
+                        <td>$20</td>
+                    </tr>
+                </tbody>
+                <thead>
+                    <tr>
+                        <th>Price in total</th>
+                        <th>$40</th>
+                    </tr>
+                </thead>
+            </table>
+        </section>
+        <section>
+            <h2>Contact and billing details</h2>
+            <form class="form">
+                <fieldset>
+                    <label for="name">Full name</label>
+                    <input type="text" name="name" id="name" class="form__input" required>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" class="form__input" required>
+                    <label for="adress">Adress</label>
+                    <input type="adress" name="adress" id="adress" class="form__input" required>
+                    <label for="postalcode">Postal code</label>
+                    <input type="number" name="postalcode" id="postalcode" class="form__input" required>
+                    <label for="city">City</label>
+                    <input type="text" name="city" id="city" class="form__input" required>
+                    <label for="cardnumber">Cardnumber</label>
+                    <input type="number" name="cardnumber" id="cardnumber" class="form__input" required>
+                    <label for="expiry">Expiry</label>
+                    <input type="number" name="expiry" id="expiry" class="form__input" required>
+                    <label for="cvc">CVC</label>
+                    <input type="number" name="cvc" id="cvc" class="form__input" required>
+                </fieldset>
+            </form>
+            <a href="check-out-success.html" class="cta-button">Confirm order</a>
+        </section>
+    </main>
+
+    <footer>
+        <a href="about.html">About</a>
+        <a href="contact-us.html">Send us a message</a>
+        <a href="get-involved.html">Get involved</a>
+        <a href="visit.html">Visit</a>
+    </footer>
+
+</body>
+
 </html>
