--- a/check-out-success.html
+++ b/check-out-success.html
@@ -1,53 +1,60 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Check out success</title>
-        <meta charset="UTF-8">
-        <meta name="description" Content="Order confirmation after chekcout">
-        <meta name="viewport" Content="width=device-width, initial-scale=1">
-        <!--google fonts-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
-        <!--CSS-->
-        <link rel="stylesheet" href="css/check-out-success.css">
-        <!--Favicon-->
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
-        <!--Icons-->
-        <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header>
-            <a href="index.html" class="header-logo">
-                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
-            </a>
-            <label for="menue-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
-                <i class="fas fa-bars fa"></i>
-            </label>
-            <input type="checkbox" name="menue-checkbox" id="menue-checkbox">
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="explore.html">Explore</a>
-                <a href="exhibitions.html">Exhibitions</a>
-                <a href="events.html">Events</a>                
-                <a href="tickets.html">Tickets</a>
-                <a href="cart.html" class="nav-active">Cart</a>
-            </nav>
-        </header>
-        <main> 
-            <h1>Checkout success</h1>
-            <h2>Order number: #12345</h2>
-            <h2>Thank you for your order!</h2>
-            <div class="logo__image-container">
-                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
-            </div>
-            <a href="order-summary.html" class="cta-button">Order summary</a>
-        </main>
-        <footer>
-            <a href="about.html">About</a>
-            <a href="contact-us.html">Send us a message</a>
-            <a href="get-involved.html">Get involved</a>
-            <a href="visit.html">Visit</a>
-        </footer>
-    </body>
+
+<head>
+    <title>Check out success</title>
+    <meta charset="UTF-8">
+    <meta name="description" Content="Order confirmation after chekcout">
+    <meta name="viewport" Content="width=device-width, initial-scale=1">
+    <!--google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
+        rel="stylesheet">
+    <!--CSS-->
+    <link rel="stylesheet" href="css/check-out-success.css">
+    <!--Favicon-->
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
+    <!--Icons-->
+    <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <header>
+        <a href="index.html" class="header-logo">
+            <img src="./assets/open-science-735787-removebg-preview-2.png"
+                alt="Logo of earth with a keyhole and galaxies around.">
+        </a>
+        <label for="menu-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
+            <i class="fas fa-bars fa"></i>
+        </label>
+        <input type="checkbox" name="menu-checkbox" id="menu-checkbox">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="explore.html">Explore</a>
+            <a href="exhibitions.html">Exhibitions</a>
+            <a href="events.html">Events</a>
+            <a href="tickets.html">Tickets</a>
+            <a href="cart.html" class="nav-active">Cart</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Checkout success</h1>
+        <h2>Order number: #12345</h2>
+        <h2>Thank you for your order!</h2>
+        <div class="logo__image-container">
+            <img src="./assets/open-science-735787-removebg-preview-2.png"
+                alt="Logo of earth with a keyhole and galaxies around.">
+        </div>
+        <a href="order-summary.html" class="cta-button">Order summary</a>
+    </main>
+    <footer>
+        <a href="about.html">About</a>
+        <a href="contact-us.html">Send us a message</a>
+        <a href="get-involved.html">Get involved</a>
+        <a href="visit.html">Visit</a>
+    </footer>
+</body>
+
 </html>
