--- a/contact-us.html
+++ b/contact-us.html
@@ -1,67 +1,74 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Contact us</title>
-        <meta charset="UTF-8">
-        <meta name="description" Content="Send us a message or contact us on social media.">
-        <meta name="viewport" Content="width=device-width, initial-scale=1">
-        <!--google fonts-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
-        <!--CSS-->
-        <link rel="stylesheet" href="css/contact-us.css">
-        <!--Favicon-->
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
-        <!--Icons-->
-        <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header>
-            <a href="index.html" class="header-logo">
-                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
-            </a>
-            <label for="menue-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
-                <i class="fas fa-bars fa"></i>
-            </label>
-            <input type="checkbox" name="menue-checkbox" id="menue-checkbox">
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="explore.html">Explore</a>
-                <a href="exhibitions.html">Exhibitions</a>
-                <a href="events.html">Events</a>                
-                <a href="tickets.html">Tickets</a>
-                <a href="cart.html">Cart</a>
-            </nav>
-        </header>
-        <main> 
-            <h1>Contact us</h1>
-            <section class="contact-us">
-                <h2>We're here to help!</h2>
-                <p>Got questions, need support, or want to share feedback? Reach out to us anytime—we'd love to hear from you!</p>
-                <p>Email: community.science.museum@museum.com</p>
-                <p>Facebook: <a href="https://facebook.com">Facebook</a></p>
-                <p>Instagram:<a href="https://instagram.com">Instagram</a></p>
-                <h3>Let's connect!</h3>
-            </section>
-            <form class="form">
-                <fieldset>
-                    <legend>Message us!</legend>
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" class="form__input" required>
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" class="form__input" required>
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="5" cols="30" class="form__input" required></textarea>
-                </fieldset>
-            </form>
-            <button class="cta-button">Send message</button>
-        </main>
-        <footer>
-            <a href="about.html">About</a>
-            <a href="contact-us.html" class="nav-active">Send us a message</a>
-            <a href="get-involved.html">Get involved</a>
-            <a href="visit.html">Visit</a>
-        </footer>
-    </body>
+
+<head>
+    <title>Contact us</title>
+    <meta charset="UTF-8">
+    <meta name="description" Content="Send us a message or contact us on social media.">
+    <meta name="viewport" Content="width=device-width, initial-scale=1">
+    <!--google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
+        rel="stylesheet">
+    <!--CSS-->
+    <link rel="stylesheet" href="css/contact-us.css">
+    <!--Favicon-->
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
+    <!--Icons-->
+    <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <header>
+        <a href="index.html" class="header-logo">
+            <img src="./assets/open-science-735787-removebg-preview-2.png"
+                alt="Logo of earth with a keyhole and galaxies around.">
+        </a>
+        <label for="menu-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
+            <i class="fas fa-bars fa"></i>
+        </label>
+        <input type="checkbox" name="menu-checkbox" id="menu-checkbox">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="explore.html">Explore</a>
+            <a href="exhibitions.html">Exhibitions</a>
+            <a href="events.html">Events</a>
+            <a href="tickets.html">Tickets</a>
+            <a href="cart.html">Cart</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Contact us</h1>
+        <section class="contact-us">
+            <h2>We're here to help!</h2>
+            <p>Got questions, need support, or want to share feedback? Reach out to us anytime—we'd love to hear from
+                you!</p>
+            <p>Email: community.science.museum@museum.com</p>
+            <p>Facebook: <a href="https://facebook.com">Facebook</a></p>
+            <p>Instagram:<a href="https://instagram.com">Instagram</a></p>
+            <h3>Let's connect!</h3>
+        </section>
+        <form class="form">
+            <fieldset>
+                <legend>Message us!</legend>
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" class="form__input" required>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" class="form__input" required>
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="5" cols="30" class="form__input" required></textarea>
+            </fieldset>
+        </form>
+        <button class="cta-button">Send message</button>
+    </main>
+    <footer>
+        <a href="about.html">About</a>
+        <a href="contact-us.html" class="nav-active">Send us a message</a>
+        <a href="get-involved.html">Get involved</a>
+        <a href="visit.html">Visit</a>
+    </footer>
+</body>
+
 </html>
