--- a/explore.html
+++ b/explore.html
@@ -1,95 +1,112 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Explore</title>
-        <meta charset="UTF-8">
-        <meta name="description" Content="Explore our world. We are a place for kids, teachers and researchers.">
-        <meta name="viewport" Content="width=device-width, initial-scale=1">
-        <!--google fonts-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
-        <!--CSS-->
-        <link rel="stylesheet" href="css/explore.css">
-        <!--Favicon-->
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
-        <!--Icons-->
-        <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header>
-            <a href="index.html" class="header-logo">
-                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
-            </a>
-            <label for="menue-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
-                <i class="fas fa-bars fa"></i>
-            </label>
-            <input type="checkbox" name="menue-checkbox" id="menue-checkbox">
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="explore.html" class="nav-active">Explore</a>
-                <a href="exhibitions.html">Exhibitions</a>
-                <a href="events.html">Events</a>                
-                <a href="tickets.html">Tickets</a>
-                <a href="cart.html">Cart</a>
-            </nav>
-        </header>
-        <main> 
-            <h1>Explore together</h1>
-            <h2>Kids</h2>
-                <section class="kids">
-                    <section class="card large">
-                        <div class="card-image-container large">
-                            <img src="./assets/billetto-editorial-334686.jpg" alt="Boy painting with VR glasses on">
-                        </div>
-                        <h3>Are you a young person looking to learn more about science? </h3>
-                        <h4>Come on down to our museum, there's plenty to see and do.</h4>
-                        <p>You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.</p>
-                        <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
-                    </section>
-                    <div class="card-vertical">
-                        <section class="card text">
-                            <h3>Young Stars club on Saturdays</h3>
-                            <p>We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you'll get to explore and experiment with our team of experts.</p>
-                            <a href="visit.html" class="cta-button">Visit us</a>
-                        </section>
-                        <section class="card text">
-                            <h3>Holiday clubs</h3>
-                            <p>During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, send us a message.</p>
-                            <a href="contact-us.html" class="cta-button">Contact us</a>
-                        </section>
-                    </div>
+
+<head>
+    <title>Explore</title>
+    <meta charset="UTF-8">
+    <meta name="description" Content="Explore our world. We are a place for kids, teachers and researchers.">
+    <meta name="viewport" Content="width=device-width, initial-scale=1">
+    <!--google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
+        rel="stylesheet">
+    <!--CSS-->
+    <link rel="stylesheet" href="css/explore.css">
+    <!--Favicon-->
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
+    <!--Icons-->
+    <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <header>
+        <a href="index.html" class="header-logo">
+            <img src="./assets/open-science-735787-removebg-preview-2.png"
+                alt="Logo of earth with a keyhole and galaxies around.">
+        </a>
+        <label for="menu-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
+            <i class="fas fa-bars fa"></i>
+        </label>
+        <input type="checkbox" name="menu-checkbox" id="menu-checkbox">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="explore.html" class="nav-active">Explore</a>
+            <a href="exhibitions.html">Exhibitions</a>
+            <a href="events.html">Events</a>
+            <a href="tickets.html">Tickets</a>
+            <a href="cart.html">Cart</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Explore together</h1>
+        <h2>Kids</h2>
+        <section class="kids">
+            <section class="card large">
+                <div class="card-image-container large">
+                    <img src="./assets/billetto-editorial-334686.jpg" alt="Boy painting with VR glasses on">
+                </div>
+                <h3>Are you a young person looking to learn more about science? </h3>
+                <h4>Come on down to our museum, there's plenty to see and do.</h4>
+                <p>You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet
+                    our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so
+                    make sure you come ready to learn and explore.</p>
+                <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
+            </section>
+            <div class="card-vertical">
+                <section class="card text">
+                    <h3>Young Stars club on Saturdays</h3>
+                    <p>We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00
+                        where you'll get to explore and experiment with our team of experts.</p>
+                    <a href="visit.html" class="cta-button">Visit us</a>
                 </section>
-            <section>
-                <h2>Teachers</h2>
-                <section class="card teachers">
-                    <h3>Bring Learning to Life with Our School Programs</h3>
-                    <p>As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.</p>
-                    <p>Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
+                <section class="card text">
+                    <h3>Holiday clubs</h3>
+                    <p>During the school holidays we run special holiday clubs where you can join other children your
+                        age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out
+                        more about the holiday club and how you can join, send us a message.</p>
                     <a href="contact-us.html" class="cta-button">Contact us</a>
                 </section>
-           </section>
-           <section>
-                <h2>Researchers</h2>
-                <section class="card researchers">
-                    <div class="card-image-container large">
-                        <img src="./assets/scientific-2040795_1280.jpg" alt="Scientist looking at a reactor">
-                    </div>
-                    <div class="card-vertical">
-                        <h3>Collaborate with Our Researchers and Academics</h3>
-                        <p>Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country.</p>
-                        <a href="contact-us.html" class="cta-button">Contact us</a>
-                    </div>
-                </section>
-           </section>
-        </main>
-       
-        <footer>
-            <a href="about.html">About</a>
-            <a href="contact-us.html">Send us a message</a>
-            <a href="get-involved.html">Get involved</a>
-            <a href="visit.html">Visit</a>
-        </footer>
+            </div>
+        </section>
+        <section>
+            <h2>Teachers</h2>
+            <section class="card teachers">
+                <h3>Bring Learning to Life with Our School Programs</h3>
+                <p>As a community-driven museum, we want to work with schools to create places of learning and
+                    exploring. Our team are on hand to give your students guided tours of the museum, teach them in our
+                    learning laboratory, and provide great video presentations that will excite and inspire them.</p>
+                <p>Please get in touch with us here to find out more about our facilities and to arrange a time to bring
+                    your students through for a visit.</p>
+                <a href="contact-us.html" class="cta-button">Contact us</a>
+            </section>
+        </section>
+        <section>
+            <h2>Researchers</h2>
+            <section class="card researchers">
+                <div class="card-image-container large">
+                    <img src="./assets/scientific-2040795_1280.jpg" alt="Scientist looking at a reactor">
+                </div>
+                <div class="card-vertical">
+                    <h3>Collaborate with Our Researchers and Academics</h3>
+                    <p>Are you looking to get involved with our team of researchers and academics? Our museum offers
+                        various ways for you to use our resources and contribute towards them. We have online records,
+                        laboratory space, and a working relationship with a number of universities around the country.
+                    </p>
+                    <a href="contact-us.html" class="cta-button">Contact us</a>
+                </div>
+            </section>
+        </section>
+    </main>
 
-    </body>
+    <footer>
+        <a href="about.html">About</a>
+        <a href="contact-us.html">Send us a message</a>
+        <a href="get-involved.html">Get involved</a>
+        <a href="visit.html">Visit</a>
+    </footer>
+
+</body>
+
 </html>
