--- a/get-involved.html
+++ b/get-involved.html
@@ -1,57 +1,72 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Get invovled</title>
-        <meta charset="UTF-8">
-        <meta name="description" Content="Get involved as a sponsor, volunteer or through an internship.">
-        <meta name="viewport" Content="width=device-width, initial-scale=1">
-        <!--google fonts-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
-        <!--CSS-->
-        <link rel="stylesheet" href="css/get-involved.css">
-        <!--Favicon-->
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
-        <!--Icons-->
-        <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header>
-            <a href="index.html" class="header-logo">
-                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
-            </a>
-            <label for="menue-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
-                <i class="fas fa-bars fa"></i>
-            </label>
-            <input type="checkbox" name="menue-checkbox" id="menue-checkbox">
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="explore.html">Explore</a>
-                <a href="exhibitions.html">Exhibitions</a>
-                <a href="events.html">Events</a>                
-                <a href="tickets.html">Tickets</a>
-                <a href="cart.html">Cart</a>
-            </nav>
-        </header>
-        <main> 
-           <h1>Get involved</h1>
-           <h2>Support</h2>
-           <p>There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community.</p>
-           <p>You can also support us by donating items of interest to the museum's collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our Collections Department and they will be able to assist you.</p>
-           <h2>Volunteer</h2>
-           <p>A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.</p>
-           <p>You can help volunteer in a number of different spheres. Please contact us if you'd like to find out more about how you can get involved.</p>
-           <h2>Internships</h2>
-           <p>Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.</p>
-           <p>You'll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.</p>
-           <a href="contact-us.html" class="cta-button">Contact us</a>
-        </main>
-        <footer>
-            <a href="about.html">About</a>
-            <a href="contact-us.html">Send us a message</a>
-            <a href="get-involved.html" class="nav-active">Get involved</a>
-            <a href="visit.html">Visit</a>
-        </footer>
-    </body>
+
+<head>
+    <title>Get invovled</title>
+    <meta charset="UTF-8">
+    <meta name="description" Content="Get involved as a sponsor, volunteer or through an internship.">
+    <meta name="viewport" Content="width=device-width, initial-scale=1">
+    <!--google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
+        rel="stylesheet">
+    <!--CSS-->
+    <link rel="stylesheet" href="css/get-involved.css">
+    <!--Favicon-->
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
+    <!--Icons-->
+    <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <header>
+        <a href="index.html" class="header-logo">
+            <img src="./assets/open-science-735787-removebg-preview-2.png"
+                alt="Logo of earth with a keyhole and galaxies around.">
+        </a>
+        <label for="menu-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
+            <i class="fas fa-bars fa"></i>
+        </label>
+        <input type="checkbox" name="menu-checkbox" id="menu-checkbox">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="explore.html">Explore</a>
+            <a href="exhibitions.html">Exhibitions</a>
+            <a href="events.html">Events</a>
+            <a href="tickets.html">Tickets</a>
+            <a href="cart.html">Cart</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Get involved</h1>
+        <h2>Support</h2>
+        <p>There are various ways you can support the museum. Donations are very welcome and are an important way we
+            keep this museum open and accessible to the whole community.</p>
+        <p>You can also support us by donating items of interest to the museum's collections. If you have some item or
+            collection that you think others would enjoy, please let us know by contacting our Collections Department
+            and they will be able to assist you.</p>
+        <h2>Volunteer</h2>
+        <p>A number of people volunteer their time and effort to keep the displays in good order and ready for visitors
+            to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working
+            museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to
+            discuss ideas for future exhibits and strategies for the museum.</p>
+        <p>You can help volunteer in a number of different spheres. Please contact us if you'd like to find out more
+            about how you can get involved.</p>
+        <h2>Internships</h2>
+        <p>Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of
+            nature with people? Well you could be just the right person to enjoy an internship at the museum.</p>
+        <p>You'll be learning from a number of different academics and people who are passionate about science and
+            sharing it with the wider community.</p>
+        <a href="contact-us.html" class="cta-button">Contact us</a>
+    </main>
+    <footer>
+        <a href="about.html">About</a>
+        <a href="contact-us.html">Send us a message</a>
+        <a href="get-involved.html" class="nav-active">Get involved</a>
+        <a href="visit.html">Visit</a>
+    </footer>
+</body>
+
 </html>
