--- a/check-out-success.html
+++ b/check-out-success.html
@@ -4,8 +4,8 @@
 <head>
     <title>Check out success</title>
     <meta charset="UTF-8">
-    <meta name="description" Content="Order confirmation after chekcout">
-    <meta name="viewport" Content="width=device-width, initial-scale=1">
+    <meta name="description" content="Order confirmation after checkout">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,7 @@
     <main>
         <h1>Checkout success</h1>
         <h2>Order number: #12345</h2>
-        <h2>Thank you for your order!</h2>
+        <h3>Thank you for your order!</h3>
         <div class="logo__image-container">
             <img src="./assets/open-science-735787-removebg-preview-2.png"
                 alt="Logo of earth with a keyhole and galaxies around.">
