Updated contact us
Updated typo.
Links are now opening in a new window.
Moved form button.

--- a/contact-us.html
+++ b/contact-us.html
@@ -4,8 +4,8 @@
 <head>
     <title>Contact us</title>
     <meta charset="UTF-8">
-    <meta name="description" Content="Send us a message or contact us on social media.">
-    <meta name="viewport" Content="width=device-width, initial-scale=1">
+    <meta name="description" content="Send us a message or contact us on social media.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,6 +39,7 @@
             <a href="cart.html">Cart</a>
         </nav>
     </header>
+
     <main>
         <h1>Contact us</h1>
         <section class="contact-us">
@@ -46,8 +47,8 @@
             <p>Got questions, need support, or want to share feedback? Reach out to us anytime—we'd love to hear from
                 you!</p>
             <p>Email: community.science.museum@museum.com</p>
-            <p>Facebook: <a href="https://facebook.com">Facebook</a></p>
-            <p>Instagram:<a href="https://instagram.com">Instagram</a></p>
+            <p>Facebook: <a href="https://facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a></p>
+            <p>Instagram: <a href="https://instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a></p>
             <h3>Let's connect!</h3>
         </section>
         <form class="form">
@@ -60,9 +61,10 @@
                 <label for="message">Message</label>
                 <textarea id="message" name="message" rows="5" cols="30" class="form__input" required></textarea>
             </fieldset>
+            <button type="submit" class="cta-button">Send message</button>
         </form>
-        <button class="cta-button">Send message</button>
     </main>
+
     <footer>
         <a href="about.html">About</a>
         <a href="contact-us.html" class="nav-active">Send us a message</a>
