--- a/events.html
+++ b/events.html
@@ -4,8 +4,8 @@
 <head>
     <title>Events</title>
     <meta charset="UTF-8">
-    <meta name="description" Content="Upcoming events and whats happening at the museum this week.">
-    <meta name="viewport" Content="width=device-width, initial-scale=1">
+    <meta name="description" content="Upcoming events and whats happening at the museum this week.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,7 @@
         <h1>Upcoming events</h1>
         <section class="card upcoming-events">
             <div class="card-image-container large">
-                <img src="./assets/roberto-nickson-396152.jpg" alt="A mammut in the middle of a museum">
+                <img src="./assets/roberto-nickson-396152.jpg" alt="A mammoth in the middle of a museum">
             </div>
             <div class="card-vertical">
                 <h2>Night in the museum</h2>
@@ -55,9 +55,9 @@
         </section>
 
         <section>
-            <h2>What's happening this week - 50</h2>
+            <h2>What's happening this week</h2>
             <div class="events__flex">
-                <section class="card large">
+                <article class="card large">
                     <h3>Friday</h3>
                     <div class="card-image-container__small">
                         <img src="./assets/celso-405219.jpg" alt="The moon in different phases.">
@@ -67,8 +67,8 @@
                         Technology will be delivering 3 lectures on the development of aeronautics and where the future
                         lies in this exciting "space".</p>
                     <a href="tickets.html" class="cta-button">Buy tickets</a>
-                </section>
-                <section class="card large">
+                </article>
+                <article class="card large">
                     <h3>Sunday</h3>
                     <div class="card-image-container__small">
                         <img src="./assets/scientific-2040795_1280.jpg" alt="A scientist looking at a reactor.">
@@ -79,7 +79,7 @@
                         power of the elements as we harness them. From solar energy powering lighting, to "Wind Island"
                         that shows how turbines are able to use and control wind to create power.</p>
                     <a href="tickets.html" class="cta-button">Buy tickets</a>
-                </section>
+                </article>
             </div>
         </section>
     </main>
